# adv_mla_lab_1

./: Makefile  README.md  Test_nb_lab1.ipynb  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
lab_1/: dataset.py  features.py  plots.py
lab_1/modeling/: predict.py  train.py
