[project]
name = "adv-mla-lab-1"
version = "0.1.0"
description = "testing for tutorial"
authors = [
    {name = "Mitali-UTS",email = "mitali.H.balki@stdent.uts.edu.au"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.7.1,<2.0.0)",
    "jupyterlab (>=4.4.5,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
